--- a/src/style/partial/head.styl
+++ b/src/style/partial/head.styl
@@ -9,9 +9,10 @@
     line-height: 2.5rem
     box-shadow: 0 ($shadow-offset = offset-shadow-light) ($shadow-width = width-shadow-light) color-shadow-light
     ul.nav > li
-        color:color-text-hint
+        color:color-text-default
     ul.nav > li.active
-        color: color-text-default
+        background-color: color-background-grey
+        color: color-text-active
     ul.tool
         font-size: 15px
     .input-prefix
