--- a/src/style/variables.styl
+++ b/src/style/variables.styl
@@ -9,7 +9,7 @@ color-background-body=#efefef
 
 color-border = #ccc//
 color-text-active = #000
-color-text-default = lightness(color-text-active,25%)//
+color-text-default = #333//
 color-text-hint = lightness(color-text-default,55%)
 
 offset-shadow-light =1px
