--- a/src/style/partial/main.styl
+++ b/src/style/partial/main.styl
@@ -1,4 +1,4 @@
-.main
+.view
     width:75%
     height:100%
     min-height:100%
@@ -13,6 +13,7 @@
         height:128px
         ul.playlist-desc
             padding:base-gap
+            min-width:15rem
     .btn-group.playlist-display
         border:none
     table.playlist-content
